--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
  *{
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  }
+
+ .app {
+   background-color: rgb(26, 29, 35);
+ }
+
